--- a/pages/src/app/app.component.html
+++ b/pages/src/app/app.component.html
@@ -25,6 +25,6 @@
 </nav>
 
 <div>
-  <h4 appClass [backgroundColor]="'skyblue'"> {{ images[currentPage].title }}</h4>
+  <h4 [appClass]="'skyblue'"> {{ images[currentPage].title }}</h4>
   <img [src]="images[currentPage].url" alt="">
 </div>
