--- a/comps/src/app/elements/elements-home/elements-home.component.html
+++ b/comps/src/app/elements/elements-home/elements-home.component.html
@@ -1,1 +1,14 @@
-<p>elements-home works!</p>
+<app-divider>Placeholder</app-divider>
+<app-placeholder 
+    [header]="true"
+    [line]="5"
+></app-placeholder>
+<app-divider>Segment</app-divider>
+<app-segment>
+    <div class="icon-header">
+        <i class="pdf file outline icon"></i>
+      No documents are listed for this customer.
+    </div>
+    <div class="ui primary button">Add Document</div>
+</app-segment>
+
