--- a/comps/src/app/groups/groups-home/groups-home.component.html
+++ b/comps/src/app/groups/groups-home/groups-home.component.html
@@ -1,7 +1,14 @@
-<app-divider>Table</app-divider>
+<app-divider>Table Component</app-divider>
 
 <app-table 
     class="striped celled"
     [data]="data" 
     [headers]="headers"
 ></app-table>
+
+<app-divider>Tab Menu</app-divider>
+<app-tabs>
+    <a routerLink="./" routerLinkActive="active" class="item" [routerLinkActiveOptions]="{ exact: true }">Biography</a>
+    <a routerLink="companies" routerLinkActive="active" class="item" >Comapnies</a>
+    <a routerLink="partners" routerLinkActive="active" class="item" >Partners</a>
+</app-tabs>
