--- a/comps/src/app/views/views-home/views-home.component.html
+++ b/comps/src/app/views/views-home/views-home.component.html
@@ -1,1 +1,4 @@
-<p>views-home works!</p>
+<app-divider>Statistics Component</app-divider>
+<app-statistics [data]="stats"></app-statistics>
+<app-divider>Item List Component</app-divider>
+<app-item-list [items]="items"></app-item-list>
