--- a/comps/src/app/app.component.html
+++ b/comps/src/app/app.component.html
@@ -7,6 +7,7 @@
         <a routerLink="/elements" routerLinkActive="active" class="item">Elements</a>
         <a routerLink="/groups" routerLinkActive="active" class="item" >Groups</a>
         <a routerLink="/views" routerLinkActive="active" class="item" >Views</a>
+        <a routerLink="/mods" routerLinkActive="active" class="item" >Mods</a>
     </div>
     <div class="ui segment">
         <router-outlet></router-outlet>
