styling html and css

--- a/wsearch/src/app/search-bar/search-bar.component.html
+++ b/wsearch/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,10 @@
-<form (submit)="onSubmit()">
-    <input #inputBox (input)="term = inputBox.value" />
-</form>
+<div class="box">
+    <form (submit)="onSubmit()">
+        <input
+        placeholder="Enter search term"
+        class="input"
+         #inputBox (input)="term = inputBox.value" />
+    </form>
+    
+</div>
 
